force-app/main/default/objects/JT_DynamicQueryConfiguration__mdt/JT_DynamicQueryConfiguration__mdt.object-meta.xml
<CustomObject>
    <description
  >With this custom metadata, queries adapt with ease, streamlining their management and preventing future code interventions.</description>
    <label>Dynamic Query Configuration</label>
    <pluralLabel>Dynamic Query Configurations</pluralLabel>
</CustomObject>