force-app/main/default/objects/JT_DynamicQueryConfiguration__mdt/fields/JT_BaseQuery__c.field-meta.xml
<CustomField>
    <fullName>JT_BaseQuery__c</fullName>
    <description>This field host your SOQL query configuration</description>
    <inlineHelpText
  >Example: &quot;SELECT ID, NAME FROM ACCOUNT WHERE NAME =: name&quot;</inlineHelpText>
    <label>Base Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>