force-app/main/default/objects/JT_DynamicQueryConfiguration__mdt/fields/JT_Binding__c.field-meta.xml
<CustomField>
    <fullName>JT_Binding__c</fullName>
    <description
  >This field is designed to indicate your binding in case you&apos;re using them.</description>
    <inlineHelpText
  >Example: {&quot;Name&quot;:&quot;Test Account&quot;}</inlineHelpText>
    <label>Binding</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>