force-app/main/default/objects/JT_DynamicQueryConfiguration__mdt/fields/JT_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>JT_ObjectName__c</fullName>
    <description>This field is designed to indicate end users on which object is a configuration working.</description>
    <inlineHelpText>Example: &quot;Account&quot;</inlineHelpText>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>