force-app/main/default/objects/JT_DynamicQueryConfiguration__mdt/validationRules/Require_Base_Query.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Base_Query</fullName>
    <active>true</active>
    <description
  >Since the query is required to create a configuration, this rule will enforce the content on JT_BaseQuery__c</description>
    <errorConditionFormula>ISBLANK(JT_BaseQuery__c)</errorConditionFormula>
    <errorDisplayField>JT_BaseQuery__c</errorDisplayField>
    <errorMessage
  >A query is required to create the configuration.</errorMessage>
</ValidationRule>